Started doing the costs of the total components

--- a/Laser Research.ipynb
+++ b/Laser Research.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "For this reason, we decided to use the diffraction grating formula. This formula allows us to work out what the wavelength is given the slit separation, the order and the angle between the orders: $$\\lambda=\\frac{dsin(\\theta)}{n}$$\n",
     "\n",
-    "We then rearranged the formula so we could find the optimal value for $n$. Further more, we let $\\theta=\\frac{\\pi}{2}$ in order to find a value for $n$ where the light is still visible so we could substitute this value back into the original formula and vary $d$ to find the opitimal value for the slit separation."
+    "We then rearranged the formula so we could find the optimal value for $n$."
    ]
   },
   {
@@ -62,13 +62,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "From the graph above, we ca see that the value for $n$ varies quite a lot with respect to the slit separation and the angle $\\theta$. From this we decided to test the diffraction grating in the lab, since there are multiple optimal values for $\\theta$ and $d$.\n",
+    "\n",
+    "We then decided to look at the cost of the components. Each 5mW 650nm laser beam costs about $5.69 (less than £5.00). With this in mind, we managed to come up with q"
+   ]
   }
  ],
  "metadata": {
