Got the formula for the area (researched a little bit)

--- a/Laser Research.ipynb
+++ b/Laser Research.ipynb
@@ -69,8 +69,17 @@
    "source": [
     "From the graph above, we ca see that the value for $n$ varies quite a lot with respect to the slit separation and the angle $\\theta$. From this we decided to test the diffraction grating in the lab, since there are multiple optimal values for $\\theta$ and $d$.\n",
     "\n",
-    "We then decided to look at the cost of the components. Each 5mW 650nm laser beam costs about $5.69 (less than £5.00). With this in mind, we managed to come up with q"
+    "We then decided to look at the cost of the components. Each 5mW 650nm laser beam costs about \\$5.69 (less than £5.00). With this in mind, we managed to come up with a formula to work out how many lasers we'll need to cover a certain area (blind spot) - this depends on the size of the blind zone of the lorry: $$N=A/0.72$$ Where $A$ is the desired area (depends on the lorry's blind zone) and $0.72$ is the area covered by a single laser."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
