--- a/Laser Research.ipynb
+++ b/Laser Research.ipynb
@@ -138,7 +138,8 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
